--- a/app/src/main/res/layout/fragment_person_details.xml
+++ b/app/src/main/res/layout/fragment_person_details.xml
@@ -4,44 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_person_details"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/MediumGoldenrod">
+    android:layout_height="match_parent">
 
 
     <LinearLayout
-        android:background="@color/LightYellow"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_horizontal"
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/gold"
-            app:title="Rick and Morty"
-            app:titleTextColor="@color/white" />
+            app:title="Rick and Morty" />
 
         <ImageView
-
             android:id="@+id/image_user_fragment"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="@integer/material_motion_duration_long_1"
             android:adjustViewBounds="false"
             android:paddingTop="20dp"
-            tools:src="@color/purple_200"/>
-
+            tools:src="@color/purple_200" />
 
 
         <TextView
+            style="@style/textAppearanceListItemTitle"
             android:id="@+id/person_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
+            android:textAlignment="textStart"
             tools:text="Name" />
 
         <TextView
+            style="@style/textAppearanceListItemText"
             android:id="@+id/person_gender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,6 +47,7 @@
             tools:text="other info" />
 
         <TextView
+            style="@style/textAppearanceListItemText"
             android:id="@+id/person_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
