--- a/app/src/main/res/layout/item_person.xml
+++ b/app/src/main/res/layout/item_person.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/LightYellow"
+
         android:orientation="horizontal">
 
         <ImageView
@@ -16,36 +16,30 @@
             android:id="@+id/image_view"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_margin="5dp"
+
             android:layout_marginEnd="20dp"
             android:adjustViewBounds="true"
             android:src="@mipmap/ic_launcher" />
 
+
         <TextView
+            style="@style/textAppearanceListItemTitle"
             android:id="@+id/id_person"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:padding="20dp"
-            android:textSize="20sp"
             tools:text="ID" />
 
 
         <TextView
+            style="@style/textAppearanceListItemTitle"
             android:id="@+id/text_name_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:textSize="20sp"
             tools:text="Tools text (user name)" />
 
-        <ImageButton
-
-            android:id="@+id/image_button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/ic_baseline_star_outline_24" />
 
 
     </LinearLayout>
