--- a/app/src/main/res/navigation/navigation_map.xml
+++ b/app/src/main/res/navigation/navigation_map.xml
@@ -10,13 +10,12 @@
         android:name="com.example.hm7_cleanarchitecture.googlemap.MapFragment"
         tools:layout="@layout/fragment_map">
 
-<!--        <action-->
-<!--            android:id="@+id/to_details"-->
-<!--            app:destination="@id/details"-->
-<!--            app:enterAnim="@anim/nav_default_enter_anim"-->
-<!--            app:exitAnim="@anim/nav_default_exit_anim"-->
-<!--            app:popEnterAnim="@anim/nav_default_pop_enter_anim"-->
-<!--            app:popExitAnim="@anim/nav_default_exit_anim"/>-->
+        <action
+            android:id="@+id/map"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_exit_anim"/>
     </fragment>
 
 </navigation>
