--- a/app/src/main/res/navigation/navigation_settings.xml
+++ b/app/src/main/res/navigation/navigation_settings.xml
@@ -10,13 +10,12 @@
         android:name="com.example.hm7_cleanarchitecture.fragments.SettingsFragment"
         tools:layout="@layout/fragment_settings">
 
-        <!--         https://youtu.be/aZqDFzYzTzc?t=1037
-        <!-            android:id="@+id/to_details"-->
-        <!--            app:destination="@id/details"-->
-        <!--            app:enterAnim="@anim/nav_default_enter_anim"-->
-        <!--            app:exitAnim="@anim/nav_default_exit_anim"-->
-        <!--            app:popEnterAnim="@anim/nav_default_pop_enter_anim"-->
-        <!--            app:popExitAnim="@anim/nav_default_exit_anim"/>-->
+        <action
+            android:id="@+id/settings"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_exit_anim"/>
     </fragment>
 
 </navigation>
