--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,7 @@
     <color name="gray">#708090</color>
     <color name="tomato">#FF6347</color>
     <color name="transparent">#00000000 </color>
+    <color name="darkgreen">#0F320B</color>
 
 
 
