--- a/app/src/main/res/layout/fragment_person_details.xml
+++ b/app/src/main/res/layout/fragment_person_details.xml
@@ -13,11 +13,28 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/app_bar"
+            style="@style/Widget.MaterialComponents.AppBarLayout.Primary"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:title="Rick and Morty" />
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
+                style="@style/Widget.MaterialComponents.Toolbar.Primary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:title="Person Info" />
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+
+<!--        <androidx.appcompat.widget.Toolbar-->
+<!--            android:id="@+id/toolbar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            app:title="Rick and Morty"-->
+<!--            android:background="?colorPrimary"/>-->
 
         <ImageView
             android:id="@+id/image_user_fragment"
