--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -12,20 +12,23 @@
     </style>
 
     <style name="RadioButtonStyle">
+        <item name="android:textColor">?colorOnPrimary</item>
         <item name="android:button">@null</item>
         <item name="android:padding">16dp</item>
         <item name="android:textAppearance">@style/ColoredTextStyle</item>
         <item name="android:drawableEnd">?android:attr/listChoiceIndicatorSingle</item>
-        <item name="android:textColor">@null</item>
+        
     </style>
 
     <style name="textAppearanceListItemTitle" parent="@style/TextAppearance.AppCompat.Large">
+        <item name="android:textColor">?colorOnPrimary</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="textAppearanceListItemText" parent="@style/TextAppearance.AppCompat.Medium">
         <item name="android:textSize">16sp</item>
+        <item name="android:textColor">?colorSecondary</item>
         <item name="android:textStyle">normal</item>
     </style>
 
