before removing page

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -25,6 +25,7 @@
             android:layout_height="wrap_content"
             android:src="?attr/homeAsUpIndicator"
             app:title="Rick and Morty"
+            app:menu="@menu/menu_search"
             android:background="?colorPrimary"/>
 
 
