--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/search_users"
         android:icon="@drawable/ic_baseline_search_24"
-        android:title="seatch"
+        android:title="Search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="collapseActionView|ifRoom" />
 </menu>
