--- a/app/src/main/res/navigation/navigation_list.xml
+++ b/app/src/main/res/navigation/navigation_list.xml
@@ -16,7 +16,31 @@
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_exit_anim"/>
+            app:popExitAnim="@anim/nav_default_exit_anim" />
+
+        <action
+            android:id="@+id/to_search_fragment"
+            app:destination="@id/search_fragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_exit_anim" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/search_fragment"
+        android:name="com.example.hm7_cleanarchitecture.fragments.SearchFragment"
+        tools:layout="@layout/fragment_search">
+
+        <action
+            android:id="@+id/to_details"
+            app:destination="@id/details"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_exit_anim" />
+
+
     </fragment>
 
 
@@ -27,59 +51,10 @@
 
         <argument
             android:name="key_id"
-            app:argType="integer"
-            />
+            app:argType="integer" />
 
     </fragment>
 
 
-
-
 </navigation>
 
-
-<!-- before changed-->
-<!--    <?xml version="1.0" encoding="utf-8"?>-->
-<!--<navigation xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--xmlns:tools="http://schemas.android.com/tools"-->
-<!--android:id="@+id/navigation"-->
-<!--app:startDestination="@id/list">-->
-
-<!--<fragment-->
-<!--    android:id="@+id/list"-->
-<!--    android:name="com.example.hm7_cleanarchitecture.fragments.ListFragment"-->
-<!--    tools:layout="@layout/fragment_list">-->
-
-<!--    <action-->
-<!--        android:id="@+id/to_details"-->
-<!--        app:destination="@id/details"-->
-<!--        app:enterAnim="@anim/nav_default_enter_anim"-->
-<!--        app:exitAnim="@anim/nav_default_exit_anim"-->
-<!--        app:popEnterAnim="@anim/nav_default_pop_enter_anim"-->
-<!--        app:popExitAnim="@anim/nav_default_exit_anim"/>-->
-<!--</fragment>-->
-
-
-<!--<fragment-->
-<!--    android:id="@+id/details"-->
-<!--    android:name="com.example.hm7_cleanarchitecture.fragments.PersonDetailsFragment"-->
-<!--    tools:layout="@layout/fragment_person_details">-->
-
-<!--    <argument-->
-<!--        android:name="key_id"-->
-<!--        app:argType="integer"-->
-<!--        />-->
-
-<!--</fragment>-->
-
-
-<!--&lt;!&ndash;    <fragment&ndash;&gt;-->
-<!--&lt;!&ndash;        android:id="@+id/settings"&ndash;&gt;-->
-<!--&lt;!&ndash;        android:name="com.example.hm7_cleanarchitecture.fragments.SettingsFragment"&ndash;&gt;-->
-<!--&lt;!&ndash;        tools:layout="@layout/fragment_settings">&ndash;&gt;-->
-<!--&lt;!&ndash;    </fragment>&ndash;&gt;-->
-
-
-
-<!--</navigation>-->
