--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -30,7 +30,7 @@
                 style="@style/Widget.MaterialComponents.Toolbar.Primary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:title="List of persons"
+                app:title="Search page"
                 app:menu="@menu/menu_search"/>
 
         </com.google.android.material.appbar.AppBarLayout>
