--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,7 @@
     <color name="tomato">#FF6347</color>
     <color name="transparent">#00000000 </color>
     <color name="darkgreen">#0F320B</color>
+    <color name="almostblack">#060a0b</color>
 
 
 
