--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment_list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?colorSecondaryVariant">
 
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
@@ -30,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:title="List of persons"
-                app:menu="@menu/menu_search"/>
+                />
 
         </com.google.android.material.appbar.AppBarLayout>
 
