--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -4,7 +4,13 @@
     <item
         android:id="@+id/navigation_list"
         android:icon="@drawable/ic_baseline_view_list_24"
-        android:title="list"
+        android:title="List"
+        />
+
+    <item
+        android:id="@+id/navigation_search"
+        android:icon="@drawable/ic_baseline_search_24"
+        android:title="Search"
         />
 
     <item
@@ -12,6 +18,8 @@
         android:icon="@drawable/ic_baseline_settings_24"
         android:title="Settings"
         />
+
+
 
     <item
         android:id="@+id/navigation_map"
