--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,7 +8,7 @@
 
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/steel_blue</item>
-        <item name="colorSecondaryVariant">@color/purple_200</item>
+        <item name="colorSecondaryVariant">@color/LightYellow</item>
         <item name="colorOnSecondary">@color/pale_green</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
