--- a/app/src/main/res/layout/fragment_custom_map.xml
+++ b/app/src/main/res/layout/fragment_custom_map.xml
@@ -17,6 +17,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/button"
         android:layout_gravity="center"
-        android:text="ask for permission"/>
+        android:text="@string/ask_for_permission"/>
 
 </FrameLayout>
