--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -48,7 +48,7 @@
             style="@style/RadioButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Switch to the default version" />
+            android:text="@string/switch_to_the_default_version" />
 
     </RadioGroup>
 
