--- a/app/src/main/res/layout/item_person.xml
+++ b/app/src/main/res/layout/item_person.xml
@@ -16,7 +16,6 @@
             android:id="@+id/image_view"
             android:layout_width="100dp"
             android:layout_height="100dp"
-
             android:layout_marginEnd="20dp"
             android:adjustViewBounds="true"
             android:src="@mipmap/ic_launcher" />
@@ -27,7 +26,7 @@
             android:id="@+id/id_person"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:layout_gravity="center"
             android:padding="20dp"
             tools:text="ID" />
 
@@ -37,7 +36,7 @@
             android:id="@+id/text_name_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
+            android:layout_gravity="center"
             tools:text="Tools text (user name)" />
 
 
