--- a/app/src/main/res/navigation/navigation_list.xml
+++ b/app/src/main/res/navigation/navigation_list.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_list"
-    app:startDestination="@id/list">
+    app:startDestination="@id/list"
+    >
 
     <fragment
         android:id="@+id/list"
